@@ -1,51 +1,30 @@
 // Medium
 // Backtracking
-// O(n!)
+// Time:O(n!),Space:O(n)
 // https://leetcode.cn/problems/permutations/
 
 import java.util.*;
-
 class Solution {
-    List<List<Integer>> res = new ArrayList<>();
-    // path可以用鏈表，因為鏈表的插入和刪除操作是O(1)的
-    LinkedList<Integer> path = new LinkedList<>();
-    boolean[] used;
-
     public List<List<Integer>> permute(int[] nums) {
-        if (nums.length == 0)
-            return res;
-        used = new boolean[nums.length];
-        permuteCheck(nums);
+        List<List<Integer>> res = new ArrayList<>();
+        List<Integer> path = new LinkedList<>();
+        // used arr to avoid using the same element more than once
+        boolean[] used = new boolean[nums.length];
+        backtracking(nums, used, path, res);
         return res;
     }
-
-    public void permuteCheck(int[] nums) {
+    private void backtracking(int[] nums, boolean[] used, List<Integer> path, List<List<Integer>> res) {
         if (path.size() == nums.length) {
             res.add(new ArrayList<>(path));
             return;
         }
         for (int i = 0; i < nums.length; i++) {
-            if (used[i])
-                continue;
-            used[i] = true;
+            if (used[i]) continue;
             path.add(nums[i]);
-            permuteCheck(nums);
-            path.removeLast();
+            used[i] = true;
+            backtracking(nums, used, path, res);
+            path.remove(path.size() - 1);
             used[i] = false;
         }
     }
 }
-
-/**
- * 全排列: 在排列中[1, 2][2, 1]是兩個不同的排列，並且排列是有序的
- * 所以這題不需要start這個index，因為同一個元素可能會再用一次，所以每次遍歷數字都是從index 0的位置開始遍歷
- * 但是還是需要used數組來紀錄已經選擇的元素，因為排列中的一個元素只能使用一次 => if used[i] is true, then we pass it
- * 
- * 這題的時間複雜度是O(n!)，並不是O(2^n)，因為對於全排列來說，每一個位置不只是選擇與不選擇而已的問題
- * 而是：
- * 對於第一個位置，有n種選擇;
- * 對於第二個位置，有n-1種選擇;
- * 對於第三個位置，有n-2種選擇;
- * ....
- * 對於第n個位置，有一種選擇
- **/
